<resources>
    <string name="app_name">Noted</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">username</string>
    <string name="nav_header_subtitle">email</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="title_activity_dashboard">My Memos</string>

    <string name="action_sort_note">Sort by Notes</string>
    <string name="action_sort_voice">Sort by Voice</string>
    <string name="action_sort_date">Sort by Date</string>

    <string name="menu_record">New Recording</string>
    <string name="menu_note">New Note</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Logout</string>

    <string name="StartRecordingButton">RECORD</string>
    <string name="StopRecordingButton">Stop</string>
    <string name="NameOfRecordMemo">untitled</string>

</resources>
