<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Create a Memo">
        <menu>
            <item
                android:id="@+id/nav_dashboardAddNote"
                android:icon="@drawable/ic_menu_note"
                android:title="@string/menu_note" />
            <item
                android:id="@+id/nav_dashboardAddVoice"
                android:icon="@drawable/ic_menu_record"
                android:title="@string/menu_record" />
        </menu>
    </item>

    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/nav_dashboardAccountSettings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_dashboardLogout"
                android:icon="@drawable/ic_menu_exit"
                android:title="@string/menu_exit" />
        </menu>
    </item>

</menu>
